added improved methods